Rename: board 도메인 구조 개선